# cozy-notepad

./: CMakeLists.txt  README.md  main.cpp  notepad.cpp  notepad.h  notepad.ui  res.qrc
